# BabelLLVM

./: .gitignore  README.md
.github/workflows/: build-linux-sysroots.yml  build-linux.yml  build-windows.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml  create_release.yml
Babel/: .clang-tidy  CMakeLists.txt  README.txt
Babel/CoreLibrary/: coreLibrary.c  runtime.bc
Babel/PackagedFiles/: README.md
Babel/PackagedFiles/Examples/: example.bbl  language-test.bbl
Babel/driver/: wasm_main.cpp
Babel/include/Babel/: AbstractSyntaxTree.h  ArgumentParser.h  Babel.h  BabelArgs.h  CodegenVisitor.h  DebugInfo.h  LInker.h  Lexer.h  Linker.h  Parser.h  ScopeStack.h  Token.h  TokenData.h  Visitor.h
Babel/src/: ArgumentParser.cpp  Babel.cpp  CodegenVisitor.cpp  DebugInfo.cpp  Lexer.cpp  Linker.cpp  Parser.cpp  ScopeStack.cpp  TokenData.cpp  main.cpp
